@@ -1,3 +1,8 @@
+2014-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* dimen_routines.c: Fixed a bug in the computation of nw, nh,
+	nd, and ni.
+
 2014-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* char_routines.c, ligkern_routines.c, omfonts.c,
